--- a/start.html
+++ b/start.html
@@ -17,8 +17,9 @@
 	<main>
 		<section>
 			<form>
-				<label for="email">e-Mail</label>
-				<input type="email" name="email" required>
+				<!--ricordati di aggiumgere id uguali ai for-->
+				<label for="f-email">e-Mail</label>
+				<input type="email" id="f-email" name="email" required>
 				<label for="password">Password</label>
 				<input type="password" name="password" required>
 				<label for="nome">Nome</label>
@@ -28,16 +29,16 @@
 				<label for="indirizzo">Indirizzo</label>
 				<input type="text" name="indirizzo" required>
 				<label for="cell">Cellulare</label>
-				<input type="text" name="cell" required>
+				<input type="text" name="cell">
 				<label for="piano">Scegli il piano</label>
 				<select name="piano" required>
 					<option>
 						Free Plan
 					</option>
-					<optgroup>
-						<option value="paid-plan">Standard 5€</option>
-						<option value="paid-plan">Plus 10€</option>
-						<option value="paid-plan">Premium 15€</option>
+					<optgroup label="A pagamento">
+						<option value="5">Standard 5€</option>
+						<option value="10">Plus 10€</option>
+						<option value="15">Premium 15€</option>
 					</optgroup>
 				</select>
 				<label for="pro-plan">Vuoi ottenere i vantaggi del ProPlan?</label>
