--- a/start.html
+++ b/start.html
@@ -20,18 +20,24 @@
 				<!--ricordati di aggiumgere id uguali ai for-->
 				<label for="f-email">e-Mail</label>
 				<input type="email" id="f-email" name="email" required>
-				<label for="password">Password</label>
-				<input type="password" name="password" required>
-				<label for="nome">Nome</label>
-				<input type="text" name="nome" required>
-				<label for="cognome">Cognome</label>
-				<input type="text" name="cognome" required>
-				<label for="indirizzo">Indirizzo</label>
-				<input type="text" name="indirizzo" required>
-				<label for="cell">Cellulare</label>
-				<input type="text" name="cell">
-				<label for="piano">Scegli il piano</label>
-				<select name="piano" required>
+
+				<label for="f-pass">Password</label>
+				<input type="password" id="f-pass" name="password" required>
+
+				<label for="f-nome">Nome</label>
+				<input type="text" id="f-nome" name="nome" required>
+
+				<label for="f-cognome">Cognome</label>
+				<input type="text" id="f-cognome" name="cognome" required>
+
+				<label for="f-indirizzo">Indirizzo</label>
+				<input type="text" id="f-indirizzo" name="indirizzo" required>
+
+				<label for="f-cell">Cellulare</label>
+				<input type="text" id="f-cell" name="cell">
+
+				<label for="f-piano">Scegli il piano</label>
+				<select id="f-piano" name="piano" required>
 					<option>
 						Free Plan
 					</option>
@@ -41,8 +47,9 @@
 						<option value="15">Premium 15€</option>
 					</optgroup>
 				</select>
-				<label for="pro-plan">Vuoi ottenere i vantaggi del ProPlan?</label>
-				<input type="checkbox" name="pro-plan">
+
+				<label for="f-pro-plan">Vuoi ottenere i vantaggi del ProPlan?</label>
+				<input type="checkbox" id="f-pro-plan" name="pro-plan">
 
 
 			</form>
