--- a/start.html
+++ b/start.html
@@ -16,8 +16,8 @@
 <body>
 	<main>
 		<section>
-			<form>
-				<!--ricordati di aggiumgere id uguali ai for-->
+			<form action="#"> 
+			<div>
 				<label for="f-email">e-Mail</label>
 				<input type="email" id="f-email" name="email" required>
 
@@ -35,7 +35,8 @@
 
 				<label for="f-cell">Cellulare</label>
 				<input type="text" id="f-cell" name="cell">
-
+			</div>
+			<div>
 				<label for="f-piano">Scegli il piano</label>
 				<select id="f-piano" name="piano" required>
 					<option>
@@ -50,8 +51,26 @@
 
 				<label for="f-pro-plan">Vuoi ottenere i vantaggi del ProPlan?</label>
 				<input type="checkbox" id="f-pro-plan" name="pro-plan">
+			</div>
+			<div>
+			<fieldset>
+				<legend>Dati Fatturazione</legend>
+				<label for="f-cc">Numero Carta</label>
+				<input id="f--cc" name="cc" type="text" pattern="[0-9]" minlength="16" maxlength="16" title="Usa un formato valido! (16 cifre)" required/>
 
+				<label for="f-cvc">CVC</label>
+				<input id="f-cvc" name="cvc" type="text" pattern="[0-9]" minlength="3" maxlength="4" title="Usa un formato valido! (3-4 cifre)" required/>
 
+				<label for="f-exp-date">Scadenza</label>
+				<input id="f-exp-date" name="exp" type="date" required/>
+
+				<label for="f-ind-fatt">Indirizzo di fatturazione</label>
+				<input type="text" id="f-ind-fatt" name="address" required/>
+			</fieldset>
+			</div>
+			<div>
+				<button type="submit">Conferma</button>
+			</div>
 			</form>
 		</section>
 	</main>
