--- a/start.html
+++ b/start.html
@@ -31,6 +31,9 @@
 				<label for="f-cognome">Cognome</label>
 				<input type="text" id="f-cognome" name="cognome" required>
 
+				<label for="f-bd">Data di nascita</label>
+				<input type="date" id="f-bd" name="data-nascita" required>
+
 				<label for="f-indirizzo">Indirizzo</label>
 				<input type="text" id="f-indirizzo" name="indirizzo" required>
 
