--- a/start.html
+++ b/start.html
@@ -8,7 +8,8 @@
     <title>Compito Form</title>
 	<style>
 		label {
-			display: block
+			display: block;
+			font-weight: bold;
 		}
 	</style>
 </head>
